fix: gap between icon list

--- a/public/css/components/_footer.scss
+++ b/public/css/components/_footer.scss
@@ -16,12 +16,4 @@ footer {
     align-items: center;
     margin-bottom: space(1);
   }
-
-  & .socials {
-    margin-right: 0;
-
-    & > svg {
-      margin-left: 0;
-    }
-  }
 }
