--- a/public/css/components/_socials.scss
+++ b/public/css/components/_socials.scss
@@ -6,6 +6,7 @@
   align-items: center;
   align-self: flex-end;
   margin-right: space(2);
+  gap: space(1);
 
   & > a:last-child svg {
     height: 26px;
@@ -15,9 +16,5 @@
 
   & :nth-child(2) {
     transform: translateY(-1px);
-  }
-
-  & > * {
-    margin-left: space(1);
   }
 }
